Add styling to buttons

--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
             </div>
             <div class="calculatorBody">
                 <div class="row">
-                    <button id="1"> 1 </button>
-                    <button id="2"> 2 </button>
-                    <button id="3"> 3 </button>
-                    <button id="plus"> + </button>
+                    <button id="1" class="button-number"> 1 </button>
+                    <button id="2" class="button-number"> 2 </button>
+                    <button id="3" class="button-number"> 3 </button>
+                    <button id="plus" class="button-operator"> + </button>
                 </div>
                 <div class="row">
-                    <button id="4"> 4 </button>
-                    <button id="5"> 5 </button>
-                    <button id="6"> 6 </button>
-                    <button id="subtract"> - </button>
+                    <button id="4" class="button-number"> 4 </button>
+                    <button id="5" class="button-number"> 5 </button>
+                    <button id="6" class="button-number"> 6 </button>
+                    <button id="subtract" class="button-operator"> - </button>
                 </div>
                 <div class="row">
-                    <button id="7"> 7 </button>
-                    <button id="8"> 8 </button>
-                    <button id="9"> 9 </button>
-                    <button id="multiply"> * </button>
+                    <button id="7" class="button-number"> 7 </button>
+                    <button id="8" class="button-number"> 8 </button>
+                    <button id="9" class="button-number"> 9 </button>
+                    <button id="multiply" class="button-operator"> * </button>
                 </div>
                 <div class="row">
                     <button id="clear"> C </button>
-                    <button id="0"> 0 </button>
-                    <button id="equals"> = </button>
-                    <button id="divide"> / </button>
+                    <button id="0" class="button-number"> 0 </button>
+                    <button id="equals" class="button-operator"> = </button>
+                    <button id="divide" class="button-operator"> / </button>
                 </div>
             </div>
         </div>
