Add further styling to buttons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <title> Calculator </title>
         <link rel="stylesheet" href="./styles.css/styles.css">
         <script src="./scripts/scripts.js" defer></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     </head>
     <header> 
         <h1> Calculator </h1>
@@ -39,6 +43,11 @@
                     <button id="equals" class="button-operator"> = </button>
                     <button id="divide" class="button-operator"> / </button>
                 </div>
+                <footer>
+                    <div class="copyright">
+                        Built By: <a href="https://github.com/bayntris"> bayntris</a>
+                    </div>
+                </footer>
             </div>
         </div>
     </div>
